blog entry for 2016-11-06

--- a/home/wiki/Change_log/2013.html
+++ b/home/wiki/Change_log/2013.html
@@ -386,7 +386,7 @@
     </p>
     <ul>
       <li>
-        (fix) Import: species.wikimedia.org had wrong domain name; EX:species.wikispecies.org {detected by Miles}. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_5" title="Dashboard/Import/Offline" class="xowa-visited">Dashboard/Import/Offline</a>
+        (fix) Import: species.wikimedia.org had wrong domain name; EX:species.wikispecies.org {detected by Miles}. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_5" title="Dashboard/Import/Offline">Dashboard/Import/Offline</a>
       </li>
       <li>
         (change) Parser: Category should not show in TOC; EX:== a [[Category:b]] ==. See: <a href="http://en.wikipedia.org/wiki/Tamil_Nadu" rel="nofollow" class="external free">http://en.wikipedia.org/wiki/Tamil_Nadu</a>
@@ -457,7 +457,7 @@
         (add) Server: Added alpha HTTP server {contributed by Mattze96 }. See: <a href="http://xowa.org/home/wiki/App/Xtn/Browser/HTTP_Server.html" id="xolnki_8" title="App/Xtn/Browser/HTTP Server">App/Xtn/Browser/HTTP_Server</a>
       </li>
       <li>
-        (add) Translation: Added translations for Simplified Chinese and Traditional Chinese {contributed by zjzengdongyang}. See: <a href="http://xowa.org/home/wiki/Options/Language.html" id="xolnki_9" title="Options/Language">Options/Language</a>
+        (add) Translation: Added translations for Simplified Chinese and Traditional Chinese {contributed by zjzengdongyang}. See: <a href="http://xowa.org/home/wiki/Options/Language.html" id="xolnki_9" title="Options/Language" class="xowa-visited">Options/Language</a>
       </li>
     </ul>
     <p>
@@ -1691,7 +1691,7 @@
         (add) Search: Search now supports AllPages mode {requested by Schnark}. See: <a href="http://xowa.org/home/wiki/Options/Search_suggest.html" id="xolnki_38" title="Options/Search suggest">Options/Search_suggest</a>
       </li>
       <li>
-        (add) Import: Import/Script redesigned to be more intuitive {contributed by Schnark}. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_39" title="Dashboard/Import/Offline" class="xowa-visited">Dashboard/Import/Offline</a>
+        (add) Import: Import/Script redesigned to be more intuitive {contributed by Schnark}. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_39" title="Dashboard/Import/Offline">Dashboard/Import/Offline</a>
       </li>
     </ul>
     <p>
@@ -1822,7 +1822,7 @@
         (add) Timeline: Tabs in text data supported; EX:http://de.wikipedia.org/wiki/Hilfe:Zeitleisten#TextData {contributed by Schnark}.
       </li>
       <li>
-        (add) Import: allow GUI selection of data dump file {requested by hidp123;Karimoune}. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_42" title="Dashboard/Import/Offline" class="xowa-visited">Dashboard/Import/Offline</a>
+        (add) Import: allow GUI selection of data dump file {requested by hidp123;Karimoune}. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_42" title="Dashboard/Import/Offline">Dashboard/Import/Offline</a>
       </li>
       <li>
         (add) Import: if offline and importing new wiki, automatically copy home wiki's /html/ directory.
@@ -1860,7 +1860,7 @@
         (add) Search syntax supports AND, OR, quotes; EX:http://en.wikipedia.org/wiki/Special:Search/Earth_AND_History?fulltext=y&amp;search=Earth+AND+History {requested by Schnark}. See <a href="http://xowa.org/home/wiki/App/Search.html" id="xolnki_46" title="App/Search">App/Search</a>
       </li>
       <li>
-        (add) Version 2 category upgrade can be done through UI. See <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_47" title="Dashboard/Import/Offline" class="xowa-visited">Dashboard/Import/Offline</a> and <a href="http://xowa.org/home/wiki/Help:Core/Category/V2/Setup.html" id="xolnki_48" title="Help:Core/Category/V2/Setup">Help:Core/Category/V2/Setup</a>
+        (add) Version 2 category upgrade can be done through UI. See <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_47" title="Dashboard/Import/Offline">Dashboard/Import/Offline</a> and <a href="http://xowa.org/home/wiki/Help:Core/Category/V2/Setup.html" id="xolnki_48" title="Help:Core/Category/V2/Setup">Help:Core/Category/V2/Setup</a>
       </li>
       <li>
         (add) Wiki import can read directly from bz2; no need to unzip to xml {requested by Schark, Miles}. See <a href="http://xowa.org/home/wiki/Dev/Design/Data_dump_format.html" id="xolnki_49" title="Dev/Design/Data dump format">Dev/Design/Data_dump_format</a>
@@ -2215,7 +2215,7 @@
     </p>
     <ul>
       <li>
-        (add) Missing talk/user namespace links can be configured to show red/hidden {requested by Schnark} See <a href="http://xowa.org/home/wiki/Options/HTML.html" id="xolnki_54" title="Options/HTML" class="xowa-visited">Options/HTML</a>
+        (add) Missing talk/user namespace links can be configured to show red/hidden {requested by Schnark} See <a href="http://xowa.org/home/wiki/Options/HTML.html" id="xolnki_54" title="Options/HTML">Options/HTML</a>
       </li>
       <li>
         (add) Visited pages now color-coded {assisted by Schnark}
