--- a/home/wiki/Change_log/2014.html
+++ b/home/wiki/Change_log/2014.html
@@ -587,7 +587,7 @@
     </p>
     <ul>
       <li>
-        Options: Fix UI language staying as English after reloading XOWA. See: <a href="http://xowa.org/home/wiki/Options/Language.html" id="xolnki_5" title="Options/Language">Options/Language</a>
+        Options: Fix UI language staying as English after reloading XOWA. See: <a href="http://xowa.org/home/wiki/Options/Language.html" id="xolnki_5" title="Options/Language" class="xowa-visited">Options/Language</a>
       </li>
     </ul>
     <p>
@@ -1615,7 +1615,7 @@
         Html.Portal: Add "Show home menu in sidebar" {suggested by Anselm}. See: <a href="http://xowa.org/home/wiki/Options/Wiki/HTML.html" id="xolnki_14" title="Options/Wiki/HTML">Options/Wiki/HTML</a>
       </li>
       <li>
-        Dev: Add option to show / hide warnings / notes. See: <a href="http://xowa.org/home/wiki/Options/Dev.html" id="xolnki_15" title="Options/Dev">Options/Dev</a>
+        Dev: Add option to show / hide warnings / notes. See: <a href="http://xowa.org/home/wiki/Options/Dev.html" id="xolnki_15" title="Options/Dev" class="xowa-visited">Options/Dev</a>
       </li>
     </ul>
     <p>
@@ -2215,7 +2215,7 @@
     </p>
     <ul>
       <li>
-        Gui.Tabs: Fix tab options not restored for Tab Height, Close Visible and Unselected Close Visible. See: <a href="http://xowa.org/home/wiki/Options/Tabs.html" id="xolnki_35" title="Options/Tabs">Options/Tabs</a> [broken since:start]
+        Gui.Tabs: Fix tab options not restored for Tab Height, Close Visible and Unselected Close Visible. See: <a href="http://xowa.org/home/wiki/Options/Tabs.html" id="xolnki_35" title="Options/Tabs" class="xowa-visited">Options/Tabs</a> [broken since:start]
       </li>
       <li>
         Options: Escape HTML characters in &lt;textarea&gt; (affects content code format incorrectly using "&lt;pre&gt;"). See: <a href="http://xowa.org/home/wiki/Options/Wiki/HTML.html" id="xolnki_36" title="Options/Wiki/HTML">Options/Wiki/HTML</a>
@@ -2232,13 +2232,13 @@
         Javascript: Add option to control default show / hide state of Table of Contents. See: <a href="http://xowa.org/home/wiki/Options/Wiki/HTML.html" id="xolnki_37" title="Options/Wiki/HTML">Options/Wiki/HTML</a> <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/Table_of_contents.html" id="xolnki_38" title="Diagnostics/Javascript/Table of contents">Diagnostics/Javascript/Table_of_contents</a>
       </li>
       <li>
-        Javascript: Add option to control default show / hide state of collapsible tables. See: <a href="http://xowa.org/home/wiki/Options/Wiki/HTML.html" id="xolnki_39" title="Options/Wiki/HTML">Options/Wiki/HTML</a> <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/Collapsible.html" id="xolnki_40" title="Diagnostics/Javascript/Collapsible" class="xowa-visited">Diagnostics/Javascript/Collapsible</a>
+        Javascript: Add option to control default show / hide state of collapsible tables. See: <a href="http://xowa.org/home/wiki/Options/Wiki/HTML.html" id="xolnki_39" title="Options/Wiki/HTML">Options/Wiki/HTML</a> <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/Collapsible.html" id="xolnki_40" title="Diagnostics/Javascript/Collapsible">Diagnostics/Javascript/Collapsible</a>
       </li>
       <li>
         Javascript: Add option to control default show / hide state of NavFrames. See: <a href="http://xowa.org/home/wiki/Options/Wiki/HTML.html" id="xolnki_41" title="Options/Wiki/HTML">Options/Wiki/HTML</a> <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/NavFrame.html" id="xolnki_42" title="Diagnostics/Javascript/NavFrame">Diagnostics/Javascript/NavFrame</a>
       </li>
       <li>
-        Gui.Tab: Add option to hide tab bar if 1 or 0 tabs {suggested by Schnark}. See: <a href="http://xowa.org/home/wiki/Options/Tabs.html" id="xolnki_43" title="Options/Tabs">Options/Tabs</a>
+        Gui.Tab: Add option to hide tab bar if 1 or 0 tabs {suggested by Schnark}. See: <a href="http://xowa.org/home/wiki/Options/Tabs.html" id="xolnki_43" title="Options/Tabs" class="xowa-visited">Options/Tabs</a>
       </li>
       <li>
         Gui.Url_bar: Add shortcut to open multiple lines in separate tabs; EX:Copy "a\nb" to clipboard -&gt; Ctrl + Enter.
@@ -2554,10 +2554,10 @@
         Gui: Support customizable keyboard shortcuts. See: <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_55" title="Options/Shortcuts">Options/Shortcuts</a>
       </li>
       <li>
-        Gui: Update UI language dynamically (do not require restart). See: <a href="http://xowa.org/home/wiki/Options/Language.html" id="xolnki_56" title="Options/Language">Options/Language</a>
+        Gui: Update UI language dynamically (do not require restart). See: <a href="http://xowa.org/home/wiki/Options/Language.html" id="xolnki_56" title="Options/Language" class="xowa-visited">Options/Language</a>
       </li>
       <li>
-        Gui: Expand number of available UI languages. See: <a href="http://xowa.org/home/wiki/Options/Language.html" id="xolnki_57" title="Options/Language">Options/Language</a>
+        Gui: Expand number of available UI languages. See: <a href="http://xowa.org/home/wiki/Options/Language.html" id="xolnki_57" title="Options/Language" class="xowa-visited">Options/Language</a>
       </li>
       <li>
         Gui: Enable hide / show on table of contents. See: <a href="https://en.wikipedia.org/wiki/Palenque" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Palenque</a>
@@ -2787,7 +2787,7 @@
         Gui: Add popup menu for clicking on file. See: <a href="http://xowa.org/home/wiki/Options/Menus.html" id="xolnki_66" title="Options/Menus">Options/Menus</a>
       </li>
       <li>
-        Gui: Add option for min chars / max chars in tab buttons. See: <a href="http://xowa.org/home/wiki/Options/Tabs.html" id="xolnki_67" title="Options/Tabs">Options/Tabs</a>
+        Gui: Add option for min chars / max chars in tab buttons. See: <a href="http://xowa.org/home/wiki/Options/Tabs.html" id="xolnki_67" title="Options/Tabs" class="xowa-visited">Options/Tabs</a>
       </li>
     </ul>
     <p>
@@ -2890,19 +2890,19 @@
         Gui.Tabs.Buttons: Show url as tooltip.
       </li>
       <li>
-        Gui.Tabs.Buttons: Add option for place on top. See: <a href="http://xowa.org/home/wiki/Options/Tabs.html" id="xolnki_69" title="Options/Tabs">Options/Tabs</a>
+        Gui.Tabs.Buttons: Add option for place on top. See: <a href="http://xowa.org/home/wiki/Options/Tabs.html" id="xolnki_69" title="Options/Tabs" class="xowa-visited">Options/Tabs</a>
       </li>
       <li>
-        Gui.Tabs.Buttons: Add option for tab height. See: <a href="http://xowa.org/home/wiki/Options/Tabs.html" id="xolnki_70" title="Options/Tabs">Options/Tabs</a>
+        Gui.Tabs.Buttons: Add option for tab height. See: <a href="http://xowa.org/home/wiki/Options/Tabs.html" id="xolnki_70" title="Options/Tabs" class="xowa-visited">Options/Tabs</a>
       </li>
       <li>
-        Gui.Tabs.Buttons: Add option for curved button. See: <a href="http://xowa.org/home/wiki/Options/Tabs.html" id="xolnki_71" title="Options/Tabs">Options/Tabs</a>
+        Gui.Tabs.Buttons: Add option for curved button. See: <a href="http://xowa.org/home/wiki/Options/Tabs.html" id="xolnki_71" title="Options/Tabs" class="xowa-visited">Options/Tabs</a>
       </li>
       <li>
-        Gui.Tabs.Buttons: Add option for close button visible. See: <a href="http://xowa.org/home/wiki/Options/Tabs.html" id="xolnki_72" title="Options/Tabs">Options/Tabs</a>
+        Gui.Tabs.Buttons: Add option for close button visible. See: <a href="http://xowa.org/home/wiki/Options/Tabs.html" id="xolnki_72" title="Options/Tabs" class="xowa-visited">Options/Tabs</a>
       </li>
       <li>
-        Gui.Tabs.Buttons: Add option for unselected close button visible. See: <a href="http://xowa.org/home/wiki/Options/Tabs.html" id="xolnki_73" title="Options/Tabs">Options/Tabs</a>
+        Gui.Tabs.Buttons: Add option for unselected close button visible. See: <a href="http://xowa.org/home/wiki/Options/Tabs.html" id="xolnki_73" title="Options/Tabs" class="xowa-visited">Options/Tabs</a>
       </li>
     </ul>
     <p>
@@ -3519,7 +3519,7 @@
     </p>
     <ul>
       <li>
-        Import: Update command-line example to specify bz2 instead of xml; EX:src_bz2_fil_('file.xml.bz2') {detected by Anselm}. See: <a href="http://xowa.org/home/wiki/Dev/Command-line.html" id="xolnki_80" title="Dev/Command-line" class="xowa-visited">Dev/Command-line</a>
+        Import: Update command-line example to specify bz2 instead of xml; EX:src_bz2_fil_('file.xml.bz2') {detected by Anselm}. See: <a href="http://xowa.org/home/wiki/Dev/Command-line.html" id="xolnki_80" title="Dev/Command-line">Dev/Command-line</a>
       </li>
       <li>
         Command-line: Add comment explaining XOWA_DIR variable for Linux / Mac OS X shell scripts; EX:xowa_linux.sh {detected by DomasoFan}.
@@ -3791,7 +3791,7 @@
         Lang: Fix broken zh-hant; EX:/user/anonymous/lang/xowa/zh-hant.gfs. See: <a href="http://commons.wikimedia.org/wiki/Category:Mona_Lisa" rel="nofollow" class="external free">http://commons.wikimedia.org/wiki/Category:Mona_Lisa</a>
       </li>
       <li>
-        Gui: Change message box prompt from "yes" to "ok" {detected by Anselm}. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_82" title="Dashboard/Import/Offline" class="xowa-visited">Dashboard/Import/Offline</a>
+        Gui: Change message box prompt from "yes" to "ok" {detected by Anselm}. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_82" title="Dashboard/Import/Offline">Dashboard/Import/Offline</a>
       </li>
     </ul>
     <p>
@@ -3915,7 +3915,7 @@
     </p>
     <ul>
       <li>
-        Import.Script: Change "Uncompress" default from "uncompress" to "read from compressed file" {detected by Anselm}. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_88" title="Dashboard/Import/Offline" class="xowa-visited">Dashboard/Import/Offline</a>
+        Import.Script: Change "Uncompress" default from "uncompress" to "read from compressed file" {detected by Anselm}. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_88" title="Dashboard/Import/Offline">Dashboard/Import/Offline</a>
       </li>
       <li>
         Options: Fix file selector button not working for "Import bz2 by stdout process" {detected by Anselm}. See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_89" title="Options/Import" class="xowa-visited">Options/Import</a>
@@ -4220,7 +4220,7 @@
     </p>
     <ul>
       <li>
-        Import: Allow only one import at a time {detected by Schnark}. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_98" title="Dashboard/Import/Online">Dashboard/Import/Online</a> <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_99" title="Dashboard/Import/Offline" class="xowa-visited">Dashboard/Import/Offline</a>
+        Import: Allow only one import at a time {detected by Schnark}. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_98" title="Dashboard/Import/Online">Dashboard/Import/Online</a> <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_99" title="Dashboard/Import/Offline">Dashboard/Import/Offline</a>
       </li>
       <li>
         Messages: Add "Contatti" message for contactpage in itwiki sidebar. See: <a href="https://it.wikipedia.org" rel="nofollow" class="external free">https://it.wikipedia.org</a>
@@ -4321,7 +4321,7 @@
     </p>
     <ul>
       <li>
-        Import: Set search to v2 (not v1) when importing with category v2 {detected by Miles; Anselm; Schnark}. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_100" title="Dashboard/Import/Offline" class="xowa-visited">Dashboard/Import/Offline</a>
+        Import: Set search to v2 (not v1) when importing with category v2 {detected by Miles; Anselm; Schnark}. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_100" title="Dashboard/Import/Offline">Dashboard/Import/Offline</a>
       </li>
       <li>
         Gui.Url_bar: Fix shortcuts for wd.p and wd.q; EX:wd.q:2 -&gt; www.wikidata.org/wiki/Q2. [broken since:v1.1.4.1]
