--- a/home/wiki/Change_log/v3.9.2.1.html
+++ b/home/wiki/Change_log/v3.9.2.1.html
@@ -279,7 +279,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Dev/Command-line/Dumps.html" id="xolnki_5" title="Dev/Command-line/Dumps" class="xowa-visited">Dev/Command-line/Dumps</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Dev/Command-line/Dumps.html" id="xolnki_5" title="Dev/Command-line/Dumps">Dev/Command-line/Dumps</a>
       </dd>
     </dl>
     <ul>
@@ -289,7 +289,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/App/Databases/Overview.html" id="xolnki_6" title="App/Databases/Overview" class="xowa-visited">App/Databases/Overview</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/App/Databases/Overview.html" id="xolnki_6" title="App/Databases/Overview">App/Databases/Overview</a>
       </dd>
     </dl>
     <h2>
