--- a/home/wiki/Diagnostics/Scribunto/All.html
+++ b/home/wiki/Diagnostics/Scribunto/All.html
@@ -27,7 +27,7 @@
     </h2>
     <ul>
       <li>
-        Calls code in <a href="http://xowa.org/home/wiki/Module:Diagnostics/Basic.html" id="xolnki_2" title="Module:Diagnostics/Basic" class="xowa-visited">Module:Diagnostics/Basic</a>
+        Calls code in <a href="http://xowa.org/home/wiki/Module:Diagnostics/Basic.html" id="xolnki_2" title="Module:Diagnostics/Basic">Module:Diagnostics/Basic</a>
       </li>
       <li>
         Tests basic Scribunto functionality
@@ -1374,7 +1374,7 @@
         Applies to the Luaj engine (as opposed to the Lua engine)
       </li>
       <li>
-        Calls code in <a href="http://xowa.org/home/wiki/Module:Diagnostics/Luaj.html" id="xolnki_15" title="Module:Diagnostics/Luaj" class="xowa-visited">Module:Diagnostics/Luaj</a>
+        Calls code in <a href="http://xowa.org/home/wiki/Module:Diagnostics/Luaj.html" id="xolnki_15" title="Module:Diagnostics/Luaj">Module:Diagnostics/Luaj</a>
       </li>
       <li>
         Tests changes to the luaj_xowa.jar
