--- a/home/wiki/Options.html
+++ b/home/wiki/Options.html
@@ -328,7 +328,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Language.html" id="xolnki_3" title="Options/Language">Language</a>
+              <a href="http://xowa.org/home/wiki/Options/Language.html" id="xolnki_3" title="Options/Language" class="xowa-visited">Language</a>
             </td>
             <td>
               UI Language
@@ -336,7 +336,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Tabs.html" id="xolnki_4" title="Options/Tabs">Tabs</a>
+              <a href="http://xowa.org/home/wiki/Options/Tabs.html" id="xolnki_4" title="Options/Tabs" class="xowa-visited">Tabs</a>
             </td>
             <td>
               Tab appearance and behavior
@@ -455,7 +455,7 @@ li.active a, li.active a:hover
         <table class='options_table'>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/HTML.html" id="xolnki_17" title="Options/HTML" class="xowa-visited">Appearance</a>
+              <a href="http://xowa.org/home/wiki/Options/HTML.html" id="xolnki_17" title="Options/HTML">Appearance</a>
             </td>
             <td>
               HTML page font and custom CSS
@@ -463,7 +463,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Wiki_HTML.html" id="xolnki_18" title="Options/Wiki HTML" class="xowa-visited">Wiki</a>
+              <a href="http://xowa.org/home/wiki/Options/Wiki_HTML.html" id="xolnki_18" title="Options/Wiki HTML">Wiki</a>
             </td>
             <td>
               Miscellaneous wiki HTML options
@@ -579,7 +579,7 @@ li.active a, li.active a:hover
         <table class='options_table'>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Dev.html" id="xolnki_30" title="Options/Dev">Dev</a>
+              <a href="http://xowa.org/home/wiki/Options/Dev.html" id="xolnki_30" title="Options/Dev" class="xowa-visited">Dev</a>
             </td>
             <td>
               Developer options
