--- a/home/wiki/Wiki_setup/French_wikis.html
+++ b/home/wiki/Wiki_setup/French_wikis.html
@@ -104,10 +104,10 @@
                   <a href="#fr.wikipedia.org_Articles_.282016-10.29"><span class="tocnumber">4.1.1</span> <span class="toctext">fr.wikipedia.org Articles (2016-10)</span></a>
                 </li>
                 <li class="toclevel-3 tocsection-13">
-                  <a href="#fr.wikipedia.org_patch-1_.282016-10.29"><span class="tocnumber">4.1.2</span> <span class="toctext">fr.wikipedia.org patch-1 (2016-10)</span></a>
+                  <a href="#fr.wikipedia.org_Images_.282016-10.29"><span class="tocnumber">4.1.2</span> <span class="toctext">fr.wikipedia.org Images (2016-10)</span></a>
                 </li>
                 <li class="toclevel-3 tocsection-14">
-                  <a href="#fr.wikipedia.org_Images_.282016-10.29"><span class="tocnumber">4.1.3</span> <span class="toctext">fr.wikipedia.org Images (2016-10)</span></a>
+                  <a href="#fr.wikipedia.org_patch-1_.282016-10.29"><span class="tocnumber">4.1.3</span> <span class="toctext">fr.wikipedia.org patch-1 (2016-10)</span></a>
                 </li>
               </ul>
             </li>
@@ -222,7 +222,7 @@
       <dd>
         <dl>
           <dd>
-            Français Wikipedia - Patch: Images (2016-10) [432.41 MB]
+            Français Wikipedia - Images (2016-10) [37.19 GB]
           </dd>
         </dl>
       </dd>
@@ -231,7 +231,7 @@
       <dd>
         <dl>
           <dd>
-            Français Wikipedia - Images (2016-10) [37.19 GB]
+            Français Wikipedia - Patch: Images (2016-10) [432.41 MB]
           </dd>
         </dl>
       </dd>
@@ -420,7 +420,7 @@
         Download your dump from <a href="https://dumps.wikimedia.org/backup-index.html" rel="nofollow" class="external free">https://dumps.wikimedia.org/backup-index.html</a>
       </li>
       <li>
-        Go to <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_5" title="Dashboard/Import/Offline" class="xowa-visited">Dashboard/Import/Offline</a>
+        Go to <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_5" title="Dashboard/Import/Offline">Dashboard/Import/Offline</a>
       </li>
       <li>
         Select the dump and import it
@@ -515,21 +515,6 @@
       <ul>
         <li>
           <a href="http://archive.org/download/Xowa_frwiki_latest/Xowa_frwiki_2016-10_html_ns.104.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_frwiki_latest/Xowa_frwiki_2016-10_html_ns.104.zip</a>
-        </li>
-      </ul>
-    </div>
-    <h4>
-      <span class="mw-headline" id="fr.wikipedia.org_patch-1_.282016-10.29">fr.wikipedia.org patch-1 (2016-10)</span>
-    </h4>
-    <div style="margin-left: 2em">
-      <ul>
-        <li>
-          <a href="http://archive.org/download/Xowa_frwiki_latest/Xowa_frwiki_patch-1_core.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_frwiki_latest/Xowa_frwiki_patch-1_core.zip</a>
-        </li>
-      </ul>
-      <ul>
-        <li>
-          <a href="http://archive.org/download/Xowa_frwiki_latest/Xowa_frwiki_patch-1_html_ns.008.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_frwiki_latest/Xowa_frwiki_patch-1_html_ns.008.zip</a>
         </li>
       </ul>
     </div>
@@ -680,6 +665,21 @@
       <ul>
         <li>
           <a href="http://archive.org/download/Xowa_frwiki_latest/Xowa_frwiki_2016-10_file_ns.000_db.023.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_frwiki_latest/Xowa_frwiki_2016-10_file_ns.000_db.023.zip</a>
+        </li>
+      </ul>
+    </div>
+    <h4>
+      <span class="mw-headline" id="fr.wikipedia.org_patch-1_.282016-10.29">fr.wikipedia.org patch-1 (2016-10)</span>
+    </h4>
+    <div style="margin-left: 2em">
+      <ul>
+        <li>
+          <a href="http://archive.org/download/Xowa_frwiki_latest/Xowa_frwiki_patch-1_core.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_frwiki_latest/Xowa_frwiki_patch-1_core.zip</a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href="http://archive.org/download/Xowa_frwiki_latest/Xowa_frwiki_patch-1_html_ns.008.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_frwiki_latest/Xowa_frwiki_patch-1_html_ns.008.zip</a>
         </li>
       </ul>
     </div>
