--- a/home/wiki/Wiki_setup/German_wikis.html
+++ b/home/wiki/Wiki_setup/German_wikis.html
@@ -342,7 +342,7 @@
       <dd>
         <dl>
           <dd>
-            Deutsch Wikiquote - Articles (2016-09) [19.83 MB]
+            Deutsch Wikiquote - Articles (2016-10) [19.83 MB]
           </dd>
         </dl>
       </dd>
@@ -351,7 +351,7 @@
       <dd>
         <dl>
           <dd>
-            Deutsch Wikiquote - Images (2016-09) [34.39 MB]
+            Deutsch Wikiquote - Images (2016-10) [34.39 MB]
           </dd>
         </dl>
       </dd>
@@ -378,7 +378,7 @@
       <dd>
         <dl>
           <dd>
-            Deutsch Wikiversity - Articles (2016-09) [91.82 MB]
+            Deutsch Wikiversity - Articles (2016-10) [91.82 MB]
           </dd>
         </dl>
       </dd>
@@ -387,7 +387,7 @@
       <dd>
         <dl>
           <dd>
-            Deutsch Wikiversity - Images (2016-09) [168.13 MB]
+            Deutsch Wikiversity - Images (2016-10) [168.13 MB]
           </dd>
         </dl>
       </dd>
@@ -468,7 +468,7 @@
         Download your dump from <a href="https://dumps.wikimedia.org/backup-index.html" rel="nofollow" class="external free">https://dumps.wikimedia.org/backup-index.html</a>
       </li>
       <li>
-        Go to <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_5" title="Dashboard/Import/Offline" class="xowa-visited">Dashboard/Import/Offline</a>
+        Go to <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_5" title="Dashboard/Import/Offline">Dashboard/Import/Offline</a>
       </li>
       <li>
         Select the dump and import it
