--- a/home/wiki/Wiki_setup/Haitian_wikis.html
+++ b/home/wiki/Wiki_setup/Haitian_wikis.html
@@ -205,7 +205,7 @@
         Download your dump from <a href="https://dumps.wikimedia.org/backup-index.html" rel="nofollow" class="external free">https://dumps.wikimedia.org/backup-index.html</a>
       </li>
       <li>
-        Go to <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_5" title="Dashboard/Import/Offline" class="xowa-visited">Dashboard/Import/Offline</a>
+        Go to <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_5" title="Dashboard/Import/Offline">Dashboard/Import/Offline</a>
       </li>
       <li>
         Select the dump and import it
