--- a/home/wiki/Wiki_setup/Polish_wikis.html
+++ b/home/wiki/Wiki_setup/Polish_wikis.html
@@ -292,7 +292,7 @@
       <dd>
         <dl>
           <dd>
-            Polski Wikibooks - Articles (2016-09) [27.37 MB]
+            Polski Wikibooks - Articles (2016-10) [27.37 MB]
           </dd>
         </dl>
       </dd>
@@ -301,7 +301,7 @@
       <dd>
         <dl>
           <dd>
-            Polski Wikibooks - Images (2016-09) [279.23 MB]
+            Polski Wikibooks - Images (2016-10) [279.23 MB]
           </dd>
         </dl>
       </dd>
@@ -310,7 +310,7 @@
       <dd>
         <dl>
           <dd>
-            Polski Wikinews - Articles (2016-09) [75.47 MB]
+            Polski Wikinews - Articles (2016-10) [75.47 MB]
           </dd>
         </dl>
       </dd>
@@ -319,7 +319,7 @@
       <dd>
         <dl>
           <dd>
-            Polski Wikinews - Images (2016-09) [270.13 MB]
+            Polski Wikinews - Images (2016-10) [270.13 MB]
           </dd>
         </dl>
       </dd>
@@ -382,7 +382,7 @@
         Download your dump from <a href="https://dumps.wikimedia.org/backup-index.html" rel="nofollow" class="external free">https://dumps.wikimedia.org/backup-index.html</a>
       </li>
       <li>
-        Go to <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_5" title="Dashboard/Import/Offline" class="xowa-visited">Dashboard/Import/Offline</a>
+        Go to <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_5" title="Dashboard/Import/Offline">Dashboard/Import/Offline</a>
       </li>
       <li>
         Select the dump and import it
