--- a/home/wiki/App/Import/Import_overview.html
+++ b/home/wiki/App/Import/Import_overview.html
@@ -82,7 +82,7 @@
       <span class="mw-headline" id="Import_offline_by_script">Import offline by script</span>
     </h2>
     <p>
-      The <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_6" title="Dashboard/Import/Offline" class="xowa-visited">Import offline</a> page can generate a script that will import a wiki.
+      The <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_6" title="Dashboard/Import/Offline">Import offline</a> page can generate a script that will import a wiki.
     </p>
     <ul>
       <li>
@@ -93,7 +93,7 @@
       <span class="mw-headline" id="Import_by_command-line">Import by command-line</span>
     </h2>
     <p>
-      The <a href="http://xowa.org/home/wiki/Dev/Command-line.html" id="xolnki_7" title="Dev/Command-line" class="xowa-visited">Dev/Command-line</a> page offers instructions on importing through the command-line.
+      The <a href="http://xowa.org/home/wiki/Dev/Command-line.html" id="xolnki_7" title="Dev/Command-line">Dev/Command-line</a> page offers instructions on importing through the command-line.
     </p>
     <ul>
       <li>
