--- a/home/wiki/App/Import/Offline.html
+++ b/home/wiki/App/Import/Offline.html
@@ -21,11 +21,11 @@
       If you've downloaded a dump already, you can import the .bz2 file into XOWA.
     </p>
     <h2>
-      <span class="mw-headline" id="Import_through_Dashboard.2FImport.2FOffline">Import through <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_2" title="Dashboard/Import/Offline" class="xowa-visited">Dashboard/Import/Offline</a></span>
+      <span class="mw-headline" id="Import_through_Dashboard.2FImport.2FOffline">Import through <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_2" title="Dashboard/Import/Offline">Dashboard/Import/Offline</a></span>
     </h2>
     <ul>
       <li>
-        Go to <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_3" title="Dashboard/Import/Offline" class="xowa-visited">Dashboard/Import/Offline</a>
+        Go to <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_3" title="Dashboard/Import/Offline">Dashboard/Import/Offline</a>
       </li>
     </ul>
     <h2>
