--- a/home/wiki/Change_log.html
+++ b/home/wiki/Change_log.html
@@ -236,7 +236,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_2" title="Wiki setup/English wikis" class="xowa-visited">Wiki_setup/English_wikis</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_2" title="Wiki setup/English wikis">Wiki_setup/English_wikis</a>
       </dd>
     </dl>
     <ul>
@@ -301,7 +301,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Remove nil element from table when nil is 1st member.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wiktionary.org/wiki/仚" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/仚</a> <a href="https://en.wiktionary.org/wiki/仛" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/仛</a><a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/Luaj.html" id="xolnki_4" title="Diagnostics/Scribunto/Luaj" class="xowa-visited">Diagnostics/Scribunto/Luaj</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wiktionary.org/wiki/仚" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/仚</a> <a href="https://en.wiktionary.org/wiki/仛" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/仛</a><a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/Luaj.html" id="xolnki_4" title="Diagnostics/Scribunto/Luaj">Diagnostics/Scribunto/Luaj</a>
       </dd>
     </dl>
     <ul>
@@ -540,7 +540,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Include latest download central database.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_5" title="Wiki setup/English wikis" class="xowa-visited">Wiki_setup/English_wikis</a> <a href="http://xowa.org/home/wiki/Wiki_setup/German_wikis.html" id="xolnki_6" title="Wiki setup/German wikis">Wiki_setup/German_wikis</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_5" title="Wiki setup/English wikis">Wiki_setup/English_wikis</a> <a href="http://xowa.org/home/wiki/Wiki_setup/German_wikis.html" id="xolnki_6" title="Wiki setup/German wikis">Wiki_setup/German_wikis</a>
       </dd>
     </dl>
     <h2>
@@ -556,7 +556,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_7" title="Wiki setup/English wikis" class="xowa-visited">Wiki_setup/English_wikis</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_7" title="Wiki setup/English wikis">Wiki_setup/English_wikis</a>
       </dd>
     </dl>
     <ul>
@@ -1028,7 +1028,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Fix regex pattern for matching end of string.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://fr.wikipedia.org/wiki/Rimbaud_le_fils" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/Rimbaud_le_fils</a> <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/Luaj.html" id="xolnki_14" title="Diagnostics/Scribunto/Luaj" class="xowa-visited">Diagnostics/Scribunto/Luaj</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://fr.wikipedia.org/wiki/Rimbaud_le_fils" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/Rimbaud_le_fils</a> <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/Luaj.html" id="xolnki_14" title="Diagnostics/Scribunto/Luaj">Diagnostics/Scribunto/Luaj</a>
       </dd>
     </dl>
     <ul>
@@ -1363,7 +1363,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Dev/Command-line/Dumps.html" id="xolnki_18" title="Dev/Command-line/Dumps" class="xowa-visited">Dev/Command-line/Dumps</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Dev/Command-line/Dumps.html" id="xolnki_18" title="Dev/Command-line/Dumps">Dev/Command-line/Dumps</a>
       </dd>
     </dl>
     <ul>
@@ -1373,7 +1373,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/App/Databases/Overview.html" id="xolnki_19" title="App/Databases/Overview" class="xowa-visited">App/Databases/Overview</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/App/Databases/Overview.html" id="xolnki_19" title="App/Databases/Overview">App/Databases/Overview</a>
       </dd>
     </dl>
     <h2>
