--- a/home/wiki/Change_log/2015.html
+++ b/home/wiki/Change_log/2015.html
@@ -897,7 +897,7 @@
     </p>
     <ul>
       <li>
-        Graph: Add support for Graph extension; EX:/bin/any/xowa/xtns/Graph {detected by gnosygnu.build.warning}. See: <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/Graph.html" id="xolnki_12" title="Diagnostics/Javascript/Graph">Diagnostics/Javascript/Graph</a> <a href="https://en.wikipedia.org/wiki/Greek_withdrawal_from_the_eurozone" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Greek_withdrawal_from_the_eurozone</a> <a href="https://de.wikipedia.org/wiki/Freital" rel="nofollow" class="external free">https://de.wikipedia.org/wiki/Freital</a>
+        Graph: Add support for Graph extension; EX:/bin/any/xowa/xtns/Graph {detected by gnosygnu.build.warning}. See: <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/Graph.html" id="xolnki_12" title="Diagnostics/Javascript/Graph" class="xowa-visited">Diagnostics/Javascript/Graph</a> <a href="https://en.wikipedia.org/wiki/Greek_withdrawal_from_the_eurozone" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Greek_withdrawal_from_the_eurozone</a> <a href="https://de.wikipedia.org/wiki/Freital" rel="nofollow" class="external free">https://de.wikipedia.org/wiki/Freital</a>
       </li>
     </ul>
     <p>
@@ -1427,7 +1427,7 @@
     </p>
     <ul>
       <li>
-        Special: Add new bookmarks page {assisted by anonymous4}. See: <a href="http://xowa.org/home/wiki/Special:XowaBookmarks.html" id="xolnki_20" title="Special:XowaBookmarks" class="xowa-visited">Special:XowaBookmarks</a>
+        Special: Add new bookmarks page {assisted by anonymous4}. See: <a href="http://xowa.org/home/wiki/Special:XowaBookmarks.html" id="xolnki_20" title="Special:XowaBookmarks">Special:XowaBookmarks</a>
       </li>
     </ul>
     <p>
@@ -1477,13 +1477,13 @@
         Javascript: Upgrade jquery from 1.83 to 1.11.3 (affects nothing known); EX:/xowa/bin/any/xowa/html/res/lib/jquery/jquery-ui-1.11.3.js.
       </li>
       <li>
-        Javascript: Add jquery-ui-1.11.4.js (affects drag-and-drop to reorder bookmarks); EX:/xowa/bin/any/xowa/html/res/lib/jquery-ui/jquery-ui-1.11.4.js. See: <a href="http://xowa.org/home/wiki/Special:XowaBookmarks.html" id="xolnki_22" title="Special:XowaBookmarks" class="xowa-visited">Special:XowaBookmarks</a>
+        Javascript: Add jquery-ui-1.11.4.js (affects drag-and-drop to reorder bookmarks); EX:/xowa/bin/any/xowa/html/res/lib/jquery-ui/jquery-ui-1.11.4.js. See: <a href="http://xowa.org/home/wiki/Special:XowaBookmarks.html" id="xolnki_22" title="Special:XowaBookmarks">Special:XowaBookmarks</a>
       </li>
       <li>
-        Javascript: Add notifyjs-0.3.1.js (affects notification messages when adding bookmarks); EX:/xowa/bin/any/xowa/html/res/lib/notifyjs/notifyjs-0.3.1.js. See: <a href="http://xowa.org/home/wiki/Special:XowaBookmarks.html" id="xolnki_23" title="Special:XowaBookmarks" class="xowa-visited">Special:XowaBookmarks</a>
+        Javascript: Add notifyjs-0.3.1.js (affects notification messages when adding bookmarks); EX:/xowa/bin/any/xowa/html/res/lib/notifyjs/notifyjs-0.3.1.js. See: <a href="http://xowa.org/home/wiki/Special:XowaBookmarks.html" id="xolnki_23" title="Special:XowaBookmarks">Special:XowaBookmarks</a>
       </li>
       <li>
-        Javascript: Add dbui-0.1.1.js (affects database changes for bookmarks); EX:/xowa/bin/any/xowa/html/res/src/xowa/dbui/dbui-0.1.1.js. See: <a href="http://xowa.org/home/wiki/Special:XowaBookmarks.html" id="xolnki_24" title="Special:XowaBookmarks" class="xowa-visited">Special:XowaBookmarks</a>
+        Javascript: Add dbui-0.1.1.js (affects database changes for bookmarks); EX:/xowa/bin/any/xowa/html/res/src/xowa/dbui/dbui-0.1.1.js. See: <a href="http://xowa.org/home/wiki/Special:XowaBookmarks.html" id="xolnki_24" title="Special:XowaBookmarks">Special:XowaBookmarks</a>
       </li>
       <li>
         Source: Refactor Console_adp classes.
@@ -2497,7 +2497,7 @@
         Database: Embed CSS in wiki databases.
       </li>
       <li>
-        Import: Change import script. See: <a href="http://xowa.org/home/wiki/Dev/Command-line.html" id="xolnki_49" title="Dev/Command-line" class="xowa-visited">Dev/Command-line</a>
+        Import: Change import script. See: <a href="http://xowa.org/home/wiki/Dev/Command-line.html" id="xolnki_49" title="Dev/Command-line">Dev/Command-line</a>
       </li>
     </ul>
     <p>
@@ -2513,7 +2513,7 @@
     </p>
     <ul>
       <li>
-        Gui: Limit selection of dumps to files with .bz2 or .xml. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_50" title="Dashboard/Import/Offline" class="xowa-visited">Dashboard/Import/Offline</a>
+        Gui: Limit selection of dumps to files with .bz2 or .xml. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_50" title="Dashboard/Import/Offline">Dashboard/Import/Offline</a>
       </li>
       <li>
         Gui: Add "please wait" message when building SQLite indexes.
