--- a/home/wiki/Change_log/2016.html
+++ b/home/wiki/Change_log/2016.html
@@ -1510,7 +1510,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/App/Setup/Installation.html" id="xolnki_13" title="App/Setup/Installation">App/Setup/Installation</a> <a href="http://xowa.org/home/wiki/App/Setup/Flash_card.html" id="xolnki_14" title="App/Setup/Flash card">App/Setup/Flash_card</a> <a href="http://xowa.org/home/wiki/App/Xtn/Browser/XOWA_viewer.html" id="xolnki_15" title="App/Xtn/Browser/XOWA viewer">App/Xtn/Browser/XOWA_viewer</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/App/Setup/Installation.html" id="xolnki_13" title="App/Setup/Installation" class="xowa-visited">App/Setup/Installation</a> <a href="http://xowa.org/home/wiki/App/Setup/Flash_card.html" id="xolnki_14" title="App/Setup/Flash card">App/Setup/Flash_card</a> <a href="http://xowa.org/home/wiki/App/Xtn/Browser/XOWA_viewer.html" id="xolnki_15" title="App/Xtn/Browser/XOWA viewer">App/Xtn/Browser/XOWA_viewer</a>
       </dd>
     </dl>
     <ul>
@@ -1520,7 +1520,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_16" title="Dashboard/Import/Offline" class="xowa-visited">Dashboard/Import/Offline</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_16" title="Dashboard/Import/Offline">Dashboard/Import/Offline</a>
       </dd>
     </dl>
     <ul>
@@ -2078,7 +2078,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_23" title="Dashboard/Import/Offline" class="xowa-visited">Dashboard/Import/Offline</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_23" title="Dashboard/Import/Offline">Dashboard/Import/Offline</a>
       </dd>
     </dl>
     <ul>
@@ -2517,7 +2517,7 @@
         Scribunto: Handle multi-byte characters for lua bracketed regular expressions (resolves nothing known). See: <a href="https://en.wiktionary.org/wiki/どう" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/どう</a> <a href="https://en.wiktionary.org/wiki/를" rel="nofollow" class="external free">https://en.wiktionary.org/wiki/를</a>
       </li>
       <li>
-        Luaj: Use HOUR_OF_DAY for os.time, not HOUR (resolves hour off by 12 for os.time calls). See: <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/Luaj.html" id="xolnki_29" title="Diagnostics/Scribunto/Luaj" class="xowa-visited">Diagnostics/Scribunto/Luaj</a>
+        Luaj: Use HOUR_OF_DAY for os.time, not HOUR (resolves hour off by 12 for os.time calls). See: <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/Luaj.html" id="xolnki_29" title="Diagnostics/Scribunto/Luaj">Diagnostics/Scribunto/Luaj</a>
       </li>
       <li>
         Xtns.Dpl: Write href using full_db not page_txt; EX:Category:A B -&gt; Category:A_B x&gt; A B. See: <a href="https://en.wikiquote.org/wiki/Wikiquote:Speedy_deletions" rel="nofollow" class="external free">https://en.wikiquote.org/wiki/Wikiquote:Speedy_deletions</a>
@@ -2582,7 +2582,7 @@
     </p>
     <ul>
       <li>
-        Command-line: Expand instructions for generating HTML dumps. See: <a href="http://xowa.org/home/wiki/Dev/Command-line/Dumps.html" id="xolnki_30" title="Dev/Command-line/Dumps" class="xowa-visited">Dev/Command-line/Dumps</a>
+        Command-line: Expand instructions for generating HTML dumps. See: <a href="http://xowa.org/home/wiki/Dev/Command-line/Dumps.html" id="xolnki_30" title="Dev/Command-line/Dumps">Dev/Command-line/Dumps</a>
       </li>
     </ul>
     <p>
