--- a/home/wiki/Options/Wiki_HTML.html
+++ b/home/wiki/Options/Wiki_HTML.html
@@ -516,7 +516,7 @@ li.active a, li.active a:hover
             </ul>
           </li>
           <li id="cite_note-collapsible_table-7">
-            <span class="mw-cite-backlink"><a href="#cite_ref-collapsible_table_7-0">^</a></span> <span class="reference-text">Navigation boxes at the bottom of the article will often have a Collapse / Expand link. See <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/Collapsible.html" id="xolnki_3" title="Diagnostics/Javascript/Collapsible" class="xowa-visited">Diagnostics/Javascript/Collapsible</a> or <a href="http://en.wikipedia.org/wiki/Quantum_mechanics" rel="nofollow" class="external free">http://en.wikipedia.org/wiki/Quantum_mechanics</a><br>
+            <span class="mw-cite-backlink"><a href="#cite_ref-collapsible_table_7-0">^</a></span> <span class="reference-text">Navigation boxes at the bottom of the article will often have a Collapse / Expand link. See <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/Collapsible.html" id="xolnki_3" title="Diagnostics/Javascript/Collapsible">Diagnostics/Javascript/Collapsible</a> or <a href="http://en.wikipedia.org/wiki/Quantum_mechanics" rel="nofollow" class="external free">http://en.wikipedia.org/wiki/Quantum_mechanics</a><br>
              Choose one of the following. (default is <code>unchecked</code>)</span>
             <ul>
               <li>
